image Icon preset fix newsCards less & tpl fix news getTruncatedText function add

--- a/homepage/css/public/module.newsCards.less
+++ b/homepage/css/public/module.newsCards.less
@@ -23,7 +23,7 @@
 		}
 	}
 }
-.news_card_content {
+.news_card_content_container {
 	display: flex;
 	flex-direction: column;
 	width: 100%;
